Fixed clear all button alignment in ciphers pane

--- a/web/src/css/base/cipher.css
+++ b/web/src/css/base/cipher.css
@@ -10,6 +10,7 @@
 #btnClearAllCipherInfo {
     grid-column: 1 / span 3;
     grid-row: 1;
+    justify-self: start;
 }
 
 /******************************************/
